Add extendLibrary which joins a library with a theory
Uses regexes to parse lemma names, to figure out which is the next unused
Not tested yet!

--- a/tip-lib/tip-lib.cabal
+++ b/tip-lib/tip-lib.cabal
@@ -93,7 +93,8 @@ library
                        pretty,
                        array,
                        optparse-applicative,
-                       structural-induction >= 0.3 && < 0.4
+                       structural-induction >= 0.3 && < 0.4,
+                       regex-tdfa
   build-tools:         alex, happy
 
 executable tip
